tag, class cleanup

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="descr-section" id="main">
-        <header class="header">
+      <section class="descr-section" id="main">
+        <header>
           <div class="container">
             <div class="header-menu">
               moja firma
@@ -47,7 +47,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <section class="about-section" id="about">
         <div class="container">
           <h2 class="descr-about">Nasi specjaliści</h2>
@@ -112,7 +112,7 @@
           </div>
         </div>
       </section>
-      <footer class="footer">
+      <footer>
         <div class="container">
           <div class="footer-menu">
             Nazwa firmy - wszelkie prawa zastrzeżone, 2024
