better employee portraits

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div class="photo-container">
                 <div
                   class="employee-photo"
-                  style="background-image: url('img/e1.jpg')"
+                  style="background-image: url('img/e1.webp')"
                 ></div>
               </div>
               <div class="info-container">
@@ -86,7 +86,7 @@
               <div class="photo-container">
                 <div
                   class="employee-photo"
-                  style="background-image: url('img/e2.jpg')"
+                  style="background-image: url('img/e2.webp')"
                 ></div>
               </div>
             </li>
