--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <span class="corner-circle"></span>
               <div class="service-title-container">
                 <div>Usługa 1</div>
-                <div>(nowość)</div>
+                <div class="service-title-new">(nowość)</div>
               </div>
             </div>
             <div class="grid-item">Usługa 2</div>
